# Aero

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WORKSPACE  compile_commands.json  grammar.ebnf
src/: BUILD  CMakeLists.txt  aero.cpp  main.cc
src/cli/: cli.cc  cli.cpp  cli.h  cli.hpp
src/syntax/: syntax_kind.cc  syntax_kind.cpp  syntax_kind.h  syntax_kind.hpp
src/syntax/ast/: builder.cc  builder.cpp  builder.h  builder.hpp  element.cc  element.h  element.hpp  format.cc  format.cpp  format.h  format.hpp
src/syntax/lexer/: lexer.cc  lexer.cpp  lexer.h  lexer.hpp  token.cc  token.cpp  token.h  token.hpp
src/syntax/parser/: error.h  event.cc  event.cpp  event.h  event.hpp  marker.cc  marker.cpp  marker.h  marker.hpp  parser.cc  parser.cpp  parser.h  parser.hpp  sink.cc  sink.cpp  sink.h  sink.hpp  source.cc  source.cpp  source.h  source.hpp
src/syntax/parser/context/: token_kind.cc  token_kind.h
src/syntax/parser/tree/: expr.cc  expr.cpp  expr.h  expr.hpp  stmt.cc  stmt.h
test/: BUILD
test/syntax/lexer/: lexer.cc  lexer.cpp  lexer.h  lexer_kw_unittest.cc  lexer_literal_unittest.cc  lexer_op_unittest.cc  lexer_punc_unittest.cc  lexer_tokens_unittest.cc  lexer_ty_unittest.cc
